<resources>
    <string name="app_name">CoronaVirus</string>
    <string name="textTitle">هل شريك حياتك يحبك ؟</string>
    <string name="btnExit">خروج </string>
    <string name="sharefriends">شارك مع أصدقائك  </string>
    <string name="btnStart">ابدأ الاختبار </string>
    <string name="TextstartStatus">هل أنت مستعد لمعرفة ما يجري وراء علاقتك العاطفية ؟</string>
    <string name="btnNext">السؤال التالي</string>
    <string name="TextStats">النتيجة </string>
    <string name="TextAdvices">النصائح </string>
    <string name="TextRating">⭐ تقييم التطبيقة و شكراً</string>
    <string name="textResultLove">نسبة مرضك بفيروس الكورونا هي </string>
    <string name="textResultLovePercent">0 بالمئة</string>
    <string name="textshare"> شارك النتيجة </string>
    <string name="textrepeat"> 🔁 إعادة الاختبار</string>
    <string name="linkApp">https://play.google.com/store/apps/details?id=com.training.coronavirus</string>
    <string name="banner1_ad_unit_id">ca-app-pub-2473738391575969/5348146283</string>
    <string name="title_activity_statistices">StatisticesActivity</string>
    <string name="coronavirus_cases">Coronavirus Cases:</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="title_activity_corona_info">CoronaInfo</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
