<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textAdvices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/playvideo"
        android:drawablePadding="12dp"
        android:gravity="center"
        android:text="@string/TextAdvices"
        android:textColor="#4CAF50"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat" />

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textResultLovePercent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/shareicon"
        android:drawablePadding="7dp"
        android:gravity="center"
        android:text="@string/textshare"
        android:textColor="#7986CB"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultLovePercent" />

    <TextView
        android:id="@+id/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/share"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/textrepeat"

        android:textColor="#29B6F6"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share" />

    <ImageView
        android:id="@+id/imageheart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/textstats"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textstats"
        app:srcCompat="@drawable/logo_app" />

    <TextView
        android:id="@+id/textResultLove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageheart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/textResultLove"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageheart" />

    <TextView
        android:id="@+id/textResultLovePercent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textResultLove"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/textResultLovePercent"
        android:textColor="#76FF03"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultLove" />

    <TextView
        android:id="@+id/textstats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/TextStats"
        android:textSize="42dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>